force-app/main/default/objects/Campaign/fields/Add_to_APAC_List__c.field-meta.xml
<CustomField>
    <fullName>Add_to_APAC_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to APAC List</label>
    <type>Checkbox</type>
</CustomField>