force-app/main/default/objects/Campaign/fields/Add_to_LF_Global_List_del__c.field-meta.xml
<CustomField>
    <fullName>Add_to_LF_Global_List_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to LF Global List</label>
    <type>Checkbox</type>
</CustomField>