force-app/main/default/objects/Campaign/fields/Add_to_Subscription_Center__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Subscription_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for Marketing Cloud.</description>
    <inlineHelpText>If this field is Checked, Campaign will show up in Subscription Center Marketing Cloud</inlineHelpText>
    <label>Add to Subscription Center</label>
    <type>Checkbox</type>
</CustomField>