force-app/main/default/objects/Campaign/fields/Application_Development__c.field-meta.xml
<CustomField>
    <fullName>Application_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Development</label>
    <type>Checkbox</type>
</CustomField>