force-app/main/default/objects/Campaign/fields/Auto_Disposition_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Disposition_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For membership prospecting. Only campaigns that will have a rep do outbound emails with MixMax should be auto-dispositioned.</inlineHelpText>
    <label>Auto-Disposition Allowed</label>
    <type>Checkbox</type>
</CustomField>