force-app/main/default/objects/Campaign/fields/Blockchain__c.field-meta.xml
<CustomField>
    <fullName>Blockchain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blockchain</label>
    <type>Checkbox</type>
</CustomField>