force-app/main/default/objects/Campaign/fields/Buying_Influence__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influence__c</fullName>
    <label>Buying Influence</label>
    <length>250</length>
    <type>Text</type>
</CustomField>