force-app/main/default/objects/Campaign/fields/Cloud_Containers__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Containers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud &amp; Containers</label>
    <type>Checkbox</type>
</CustomField>