force-app/main/default/objects/Campaign/fields/DevOps_Site_Reliability__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Site_Reliability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps &amp; Site Reliability</label>
    <type>Checkbox</type>
</CustomField>