force-app/main/default/objects/Campaign/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Campaign Display Name . Marketing Cloud will consume the data. Marketing Team will add this field Manually</description>
    <inlineHelpText>For Marketing Cloud</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>