force-app/main/default/objects/Campaign/fields/Do_Not_Include_in_Master_Subscriber_List__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Include_in_Master_Subscriber_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Include in Master Subscriber List
Do_Not_Include_in_Master_Subscriber_List</description>
    <label>Do Not Include in Global Subscriber List</label>
    <type>Checkbox</type>
</CustomField>