force-app/main/default/objects/Campaign/fields/Embedded_Development__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embedded Development</label>
    <type>Checkbox</type>
</CustomField>