force-app/main/default/objects/Campaign/fields/Finos_Hubspot__c.field-meta.xml
<CustomField>
    <fullName>Finos_Hubspot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finos Hubspot</label>
    <type>Checkbox</type>
</CustomField>