force-app/main/default/objects/Campaign/fields/Interest_Areas__c.field-meta.xml
<CustomField>
    <fullName>Interest_Areas__c</fullName>
    <label>Interest Areas</label>
    <type>TextArea</type>
</CustomField>