force-app/main/default/objects/Campaign/fields/Involved_in_AI_or_ML__c.field-meta.xml
<CustomField>
    <fullName>Involved_in_AI_or_ML__c</fullName>
    <description>Does_your_work_involve_Artificial_Intelligence_or_Machine_Learning?</description>
    <label>Involved in AI or ML</label>
    <length>250</length>
    <type>Text</type>
</CustomField>