force-app/main/default/objects/Campaign/fields/Involved_with_Broadcast_and_Streaming__c.field-meta.xml
<CustomField>
    <fullName>Involved_with_Broadcast_and_Streaming__c</fullName>
    <label>Involved with Broadcast and Streaming</label>
    <length>250</length>
    <type>Text</type>
</CustomField>