force-app/main/default/objects/Campaign/fields/Involved_with_VR_AR_or_MR__c.field-meta.xml
<CustomField>
    <fullName>Involved_with_VR_AR_or_MR__c</fullName>
    <description>Does_your_work_involve_the_Virtual_Reality/Augmented_Reality/Mixed_Reality?</description>
    <label>Involved with VR AR or MR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>