force-app/main/default/objects/Campaign/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify that the campaign contains mebers whose enrollment is  completed</description>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>