force-app/main/default/objects/Campaign/fields/LF_Events__c.field-meta.xml
<CustomField>
    <fullName>LF_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LF Events</label>
    <type>Checkbox</type>
</CustomField>