force-app/main/default/objects/Campaign/fields/LF_Training__c.field-meta.xml
<CustomField>
    <fullName>LF_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LF Training</label>
    <type>Checkbox</type>
</CustomField>