force-app/main/default/objects/Campaign/fields/Linux_Kernel_Development__c.field-meta.xml
<CustomField>
    <fullName>Linux_Kernel_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linux Kernel Development</label>
    <type>Checkbox</type>
</CustomField>