force-app/main/default/objects/Campaign/fields/MC_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Project_ID__c</fullName>
    <formula>Project__r.MC_Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Project ID</label>
    <type>Text</type>
</CustomField>