force-app/main/default/objects/Campaign/fields/MCCampaignID__c.field-meta.xml
<CustomField>
    <fullName>MCCampaignID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCCampaignID</label>
    <type>Text</type>
</CustomField>