force-app/main/default/objects/Campaign/fields/Networking__c.field-meta.xml
<CustomField>
    <fullName>Networking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Networking</label>
    <type>Checkbox</type>
</CustomField>