force-app/main/default/objects/Campaign/fields/Node_js_Development__c.field-meta.xml
<CustomField>
    <fullName>Node_js_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Node.js Development</label>
    <type>Checkbox</type>
</CustomField>