force-app/main/default/objects/Campaign/fields/NoOfEnrollments__c.field-meta.xml
<CustomField>
    <fullName>NoOfEnrollments__c</fullName>
    <description>This field will have total count of enrollment count for this campaign</description>
    <label>No. Of Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>