force-app/main/default/objects/Campaign/fields/NoOfMembersInTraining__c.field-meta.xml
<CustomField>
    <fullName>NoOfMembersInTraining__c</fullName>
    <description>This field will have count of member&apos;s under specific campaign</description>
    <label>No. Of Members In Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>