force-app/main/default/objects/Campaign/fields/Number_of_Times_Attended_SIGGRAPH__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Attended_SIGGRAPH__c</fullName>
    <label>Number of Times Attended SIGGRAPH</label>
    <length>250</length>
    <type>Text</type>
</CustomField>