force-app/main/default/objects/Campaign/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>LFX Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LFX Portal</fullName>
            </value>
            <value>
                <fullName>EasyCLA</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Individual Dashboard</fullName>
            </value>
            <value>
                <fullName>Mentorship</fullName>
            </value>
            <value>
                <fullName>Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Organization Dashboard Beta Program Sign-Up</fullName>
            </value>
            <value>
                <fullName>Project Control Center Beta Program Sign-Up</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>