force-app/main/default/objects/Campaign/fields/Project_Parse__c.field-meta.xml
<CustomField>
    <fullName>Project_Parse__c</fullName>
    <description>This field captures the project name from Bevy, so that we can then parse it into a Project record in order to populate the Project lookup field for this Campaign.</description>
    <label>Project Parse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>