force-app/main/default/objects/Campaign/fields/System_Administration__c.field-meta.xml
<CustomField>
    <fullName>System_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Administration</label>
    <type>Checkbox</type>
</CustomField>