force-app/main/default/objects/Campaign/fields/Systems_Engineering_Architecture__c.field-meta.xml
<CustomField>
    <fullName>Systems_Engineering_Architecture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Systems Engineering &amp; Architecture</label>
    <type>Checkbox</type>
</CustomField>