force-app/main/default/objects/Campaign/fields/Thirdparty_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Thirdparty_Coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thirdparty Coupon</label>
    <type>Checkbox</type>
</CustomField>