force-app/main/default/objects/Campaign/fields/Training_Technology_List__c.field-meta.xml
<CustomField>
    <fullName>Training_Technology_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Technology List</label>
    <type>Checkbox</type>
</CustomField>