force-app/main/default/objects/Campaign/fields/Webinar_Host__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Host__c</fullName>
    <description>Account/Company that is hosting the webinar</description>
    <label>Webinar Host</label>
    <length>100</length>
    <type>Text</type>
</CustomField>