force-app/main/default/objects/Campaign/listViews/Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Campaigns</label>
</ListView>