force-app/main/default/objects/Campaign/listViews/AGL.listView-meta.xml
<ListView>
    <fullName>AGL</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Automotive Grade Linux</value>
    </filters>
    <label>AGL</label>
</ListView>