force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Project__c</columns>
    <columns>Event__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>