force-app/main/default/objects/Campaign/listViews/ASWF.listView-meta.xml
<ListView>
    <fullName>ASWF</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>contains</operation>
        <value>Academy Software</value>
    </filters>
    <label>ASWF</label>
</ListView>