force-app/main/default/objects/Campaign/listViews/Auto_Disposition.listView-meta.xml
<ListView>
    <fullName>Auto_Disposition</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Auto_Disposition_Allowed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Auto Disposition</label>
</ListView>