force-app/main/default/objects/Campaign/listViews/CD_Foundation.listView-meta.xml
<ListView>
    <fullName>CD_Foundation</fullName>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Continuous Delivery Foundation</value>
    </filters>
    <label>CD Foundation</label>
</ListView>