force-app/main/default/objects/Campaign/listViews/Cloud_Foundry.listView-meta.xml
<ListView>
    <fullName>Cloud_Foundry</fullName>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>CloudFoundry</value>
    </filters>
    <label>Cloud Foundry (old)</label>
</ListView>