force-app/main/default/objects/Campaign/listViews/Cloud_Foundry_new.listView-meta.xml
<ListView>
    <fullName>Cloud_Foundry_new</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Cloud Foundry</value>
    </filters>
    <label>Cloud Foundry (new)</label>
</ListView>