force-app/main/default/objects/Campaign/listViews/Cloud_Native_Computing_Foundation.listView-meta.xml
<ListView>
    <fullName>Cloud_Native_Computing_Foundation</fullName>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Cloud Native Computing Foundation</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>kramer</value>
    </filters>
    <label>Cloud Native Computing Foundation</label>
    <sharedTo>
        <role>API_User_1</role>
        <role>API_User_2</role>
        <role>API_User_3</role>
        <role>Accountant</role>
        <role>All_Linux_Foundation</role>
        <role>Business_Development_Manager</role>
        <role>Business_Operations_Manager</role>
        <role>CEO_Executive_Director</role>
        <role>CFO_COO</role>
        <role>CRO</role>
        <role>Channel_Operations_Manager</role>
        <role>Course_Delivery_Manager</role>
        <role>Customer_Support_Manager</role>
        <role>Developer</role>
        <role>Director_of_Creative</role>
        <role>Director_of_Events</role>
        <role>Director_of_Finance</role>
        <role>Event_Coordinator</role>
        <role>Event_Manager</role>
        <role>Event_Sales</role>
        <role>Infrastructure_Manager</role>
        <role>Marketing_Manager</role>
        <role>PAL_Sales</role>
        <role>Program_Manager</role>
        <role>Senior_Director_of_Finance</role>
        <role>Senior_Manager_Training_Solutions</role>
        <role>Senior_Marketing_Manager</role>
        <role>Solutions_Manager</role>
        <role>Strategic_Partnerships_Manager</role>
        <role>Support_Analyst</role>
        <role>Training_Program_Director</role>
        <role>VP_Platform</role>
        <role>Vice_President_of_Communications</role>
        <role>Vice_President_of_Events</role>
        <role>Vice_President_of_Stategic_Programs</role>
        <role>Vice_President_of_Training_and_Certification</role>
    </sharedTo>
</ListView>