force-app/main/default/objects/Campaign/listViews/CNCF_Webinars.listView-meta.xml
<ListView>
    <fullName>CNCF_Webinars</fullName>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Cloud Native Computing Foundation</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Webinar</value>
    </filters>
    <label>CNCF Webinars</label>
</ListView>