force-app/main/default/objects/Campaign/listViews/Contact_Updates_2020.listView-meta.xml
<ListView>
    <fullName>Contact_Updates_2020</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Contact Update 2020</value>
    </filters>
    <label>Contact Updates 2020</label>
</ListView>