force-app/main/default/objects/Campaign/listViews/Dronecode.listView-meta.xml
<ListView>
    <fullName>Dronecode</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Project__c</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Dronecode</value>
    </filters>
    <label>Dronecode</label>
</ListView>