force-app/main/default/objects/Campaign/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.TOT_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>Events</label>
</ListView>